--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ function makeCode () {
 	}
 	else {
 		console.log(document.getElementById("text").value);
-		qrcode.makeCode(`upi://pay?pa=AMZN0002993553@apl&pn=Rajalakshmi%T&mc=0000&tn=Pay%to%Ebenesar%Xerox&am=${document.getElementById("text").value}&cu=INR`);
+		qrcode.makeCode(`upi://pay?pa=AMZN0002993553@apl&pn=AmazonPay%20Merchant&tn=Pay%to%Ebenesar%Xerox&am=${document.getElementById("text").value}&cu=INR`);
 	}
 }
 </script>
